--- a/projeto/style.css
+++ b/projeto/style.css
@@ -2,11 +2,79 @@
     box-sizing: border-box;
 }
 body{
-    margin: 50px;
+    margin: 30px;
     font-size: 17px;
 }
 
-/* table{
+
+label{
+    display: block;
+    margin-top: 20px;
+}
+
+#name, textarea, select {
+    padding: 10px;
+    width: 400px;
+    font-size: 17px;
+    border: 1px solid rgb(184, 182, 182);
+    outline: 0;
+    margin-top: 5px;
+}
+
+textarea{
+    height: 200px;
+    resize: none;
+}
+
+#teste{
+    padding: 5px;
+    width: 80px;
+    border: 1px solid rgb(184, 182, 182);
+    outline: 0;
+}
+.termoslink{
+    text-decoration: none;
+    color: black;
+}
+.termoslink:hover{
+    text-decoration: underline
+}
+
+.botao{
+    margin-top: 10px;
+    padding: 10px;
+    font-size: 15px;
+    border: 1px solid rgb(184, 182, 182);
+    background-color: rgb(228, 228, 236);
+}
+
+.botao:hover{
+    background-color: rgb(139, 139, 139);
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*  CSS TABELA
+table{
     width: 600px;
 }
 th{
@@ -28,4 +96,5 @@ tbody tr:hover{
 tbody tr:nth-child(even){
     background-color: rgb(175, 175, 180);
 }
+
 
