--- a/projeto/estilodev.css
+++ b/projeto/estilodev.css
@@ -7,7 +7,7 @@
     
 }
 body{
-    background-color: rgb(173, 170, 170);
+    background-image: url('../projeto/img/dev.jpg');
     
     color: white;
 }
