--- a/projeto/estilodev.css
+++ b/projeto/estilodev.css
@@ -7,14 +7,17 @@
     
 }
 body{
-    background-image: url('../projeto/img/dev.jpg');
-    
+    background-image: url('../projeto/img/cafe.jpg');
+    background-size: cover;
+    background-position-y: -200px;
     color: white;
 }
 h1{
-    color: rgb(240, 13, 13);
+    color: rgb(214, 52, 52);
     text-align: center;
     margin-bottom: 10px;
+    
+    
 
 }
 #info{
@@ -23,7 +26,7 @@ h1{
     margin-bottom: 25px;
 }
 .ap{
-    color: rgb(5, 7, 143);
+    color: rgb(240, 9, 9);
     margin-bottom: 10px;
     font-weight: bold;
 
