--- a/projeto/estilodev.css
+++ b/projeto/estilodev.css
@@ -2,18 +2,19 @@
     margin: 0;
     font-family: Helvetica;
     box-sizing: border-box;
+    font-family: 'Ausion';
     
    
     
 }
 body{
-    background-image: url('../projeto/img/cafe.jpg');
+    background-image: url('../projeto/img/co.jpg');
     background-size: cover;
-    background-position-y: -200px;
+    background-position-x: -10px;
     color: white;
 }
 h1{
-    color: rgb(214, 52, 52);
+    color: rgba(235, 181, 35, 0.897);
     text-align: center;
     margin-bottom: 10px;
     
@@ -26,7 +27,7 @@ h1{
     margin-bottom: 25px;
 }
 .ap{
-    color: rgb(240, 9, 9);
+    color: rgba(3, 3, 0, 0.884);
     margin-bottom: 10px;
     font-weight: bold;
 
